--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Projeto criado para o desafio da Winnin contendo projeto de testes e2e da Wikipedia, além de testes de API Graphql do GraphqlZero",
   "main": "index.js",
   "scripts": {
-    "cy:open": "npx cypress open",
-    "cy:run": "npx cypress run"
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "keywords": [],
   "author": "",
