(feat): adding api tests on pipeline workflow

--- a/.github/workflows/cypress-e2e-tests.yml
+++ b/.github/workflows/cypress-e2e-tests.yml
@@ -1,10 +1,11 @@
-name: Cypress e2e Tests
+name: Cypress Tests
 
 on:
   workflow_dispatch: # Define que o workflow será executado manualmente
 
 jobs:
-  test:
+  api-tests:
+    name: Run API Tests
     runs-on: ubuntu-latest
 
     steps:
@@ -16,10 +17,31 @@ jobs:
         with:
           node-version: 22
 
-      - name: Install Dependencies # Instala as dependecias do projeto
+      - name: Install Dependencies # Instala as dependências do projeto
         run: |
           npm install
 
-      - name: Run Cypress e2e Tests # Executa os testes e2e do Cypress
+      - name: Run Cypress API Tests # Executa os testes de API
         run: |
-          npm run cy:run
+          npm run cy:run:api
+
+  e2e-tests:
+    name: Run E2E Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code # Faz o checkout do código do seu repositório
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js # Configura o node para a versão especificada
+        uses: actions/setup-node@v3
+        with:
+          node-version: 22
+
+      - name: Install Dependencies # Instala as dependências do projeto
+        run: |
+          npm install
+
+      - name: Run Cypress E2E Tests # Executa os testes E2E
+        run: |
+          npm run cy:run:e2e
