--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "cy:open": "cypress open",
-    "cy:run": "cypress run --browser chrome"
+    "cy:run:e2e": "cypress run --spec 'cypress/e2e/wikipedia' --browser chrome",
+    "cy:run:api": "cypress run --spec 'cypress/e2e/graphqlzero' --browser chrome"
   },
   "keywords": [],
   "author": "",
