(feat): adding filter tags tests and smoke job pipeline

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "cy:open": "cypress open",
     "cy:run:e2e": "cypress run --spec 'cypress/e2e/wikipedia' --browser chrome",
+    "cy:run:e2e:smoke": "cypress run --spec 'cypress/e2e/wikipedia' --env grepTags=smoke --browser chrome",
     "cy:run:api": "cypress run --spec 'cypress/e2e/graphqlzero' --browser chrome"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@cypress/grep": "^4.1.0",
     "cypress": "^13.17.0",
     "cypress-plugin-xhr-toggle": "^1.2.1",
     "eslint": "^9.17.0",
