--- a/.github/workflows/cypress-e2e-tests.yml
+++ b/.github/workflows/cypress-e2e-tests.yml
@@ -5,8 +5,8 @@ on:
 
 jobs:
   
-  e2e-tests:
-    name: Run E2E Tests
+  e2e-regression-tests:
+    name: Run E2E Regression Tests
     runs-on: ubuntu-latest
 
     steps:
@@ -22,6 +22,27 @@ jobs:
         run: |
           npm install
 
-      - name: Run Cypress E2E Tests # Executa os testes E2E
+      - name: Run Cypress E2E Regression Tests # Executa os testes E2E
         run: |
           npm run cy:run:e2e
+
+  e2e-smoke-tests:
+    name: Run E2E Smoke Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code # Faz o checkout do código do seu repositório
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js # Configura o node para a versão especificada
+        uses: actions/setup-node@v3
+        with:
+          node-version: 22
+
+      - name: Install Dependencies # Instala as dependências do projeto
+        run: |
+          npm install
+
+      - name: Run Cypress E2E Smoke Tests # Executa os testes E2E
+        run: |
+          npm run cy:run:e2e:smoke
