--- a/.github/workflows/cypress-e2e-tests.yml
+++ b/.github/workflows/cypress-e2e-tests.yml
@@ -10,6 +10,8 @@ jobs:
   e2e-regression-tests:
     name: Run E2E Regression Tests
     runs-on: ubuntu-latest
+    # Executa apenas quando disparado manualmente
+    if: github.event_name == 'workflow_dispatch'
 
     steps:
       - name: Checkout Code
