--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "cy:run:all": "cypress run",
     "cy:run:e2e": "cypress run --spec 'cypress/e2e/wikipedia' --browser chrome",
     "cy:run:e2e:smoke": "cypress run --spec 'cypress/e2e/wikipedia' --env grepTags=smoke --browser chrome",
-    "cy:run:api": "cypress run --spec 'cypress/e2e/graphqlzero' --browser chrome"
+    "cy:run:api": "cypress run --spec 'cypress/e2e/graphqlzero' --browser chrome",
+    "cy:run:visual:tests": "cypress run --spec 'cypress/e2e/visual_testing' --browser chrome"
   },
   "keywords": [
     "Cypress"
@@ -17,6 +18,7 @@
   "license": "MIT",
   "devDependencies": {
     "@cypress/grep": "^4.1.0",
+    "@simonsmith/cypress-image-snapshot": "^9.1.0",
     "cypress": "^13.17.0",
     "cypress-plugin-xhr-toggle": "^1.2.1",
     "eslint": "^9.17.0",
